fix: remove overflow tailwind classes from sandbox, fix #351

--- a/packages/histoire-app/src/app/style/main.pcss
+++ b/packages/histoire-app/src/app/style/main.pcss
@@ -64,7 +64,7 @@ button {
     }
   }
 
-  .__histoire-sandbox {
+  .htw-sandbox-contain {
     contain: content;
   }
 
