--- a/packages/histoire-app/src/app/style/sandbox.css
+++ b/packages/histoire-app/src/app/style/sandbox.css
@@ -17,3 +17,7 @@ html {
 .htw-sandbox-hidden {
   display: none;
 }
+
+.htw-sandbox-contain {
+  contain: content;
+}
